airflow/logs/dag_id=initialize_etl_environment/run_id=scheduled__2024-07-02T00:00:00+00:00/task_id=create_email_marketing_table/attempt=1.log
[2024-07-06T17:53:02.753+0000] {taskinstance.py:1103} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: initialize_etl_environment.create_email_marketing_table scheduled__2024-07-02T00:00:00+00:00 [queued]>
[2024-07-06T17:53:02.756+0000] {taskinstance.py:1103} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: initialize_etl_environment.create_email_marketing_table scheduled__2024-07-02T00:00:00+00:00 [queued]>
[2024-07-06T17:53:02.756+0000] {taskinstance.py:1308} INFO - Starting attempt 1 of 2
[2024-07-06T17:53:02.760+0000] {taskinstance.py:1327} INFO - Executing <Task(PostgresOperator): create_email_marketing_table> on 2024-07-02 00:00:00+00:00
[2024-07-06T17:53:02.762+0000] {standard_task_runner.py:57} INFO - Started process 65 to run task
[2024-07-06T17:53:02.763+0000] {standard_task_runner.py:84} INFO - Running: ['airflow', 'tasks', 'run', 'initialize_etl_environment', 'create_email_marketing_table', 'scheduled__2024-07-02T00:00:00+00:00', '--job-id', '790', '--raw', '--subdir', 'DAGS_FOLDER/etl_env_init.py', '--cfg-path', '/tmp/tmp44v9h0nd']
[2024-07-06T17:53:02.764+0000] {standard_task_runner.py:85} INFO - Job 790: Subtask create_email_marketing_table
[2024-07-06T17:53:02.784+0000] {task_command.py:410} INFO - Running <TaskInstance: initialize_etl_environment.create_email_marketing_table scheduled__2024-07-02T00:00:00+00:00 [running]> on host f6bf59d3e65b
[2024-07-06T17:53:02.816+0000] {taskinstance.py:1545} INFO - Exporting env vars: AIRFLOW_CTX_DAG_EMAIL='airflow@example.com' AIRFLOW_CTX_DAG_OWNER='airflow' AIRFLOW_CTX_DAG_ID='initialize_etl_environment' AIRFLOW_CTX_TASK_ID='create_email_marketing_table' AIRFLOW_CTX_EXECUTION_DATE='2024-07-02T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-07-02T00:00:00+00:00'
[2024-07-06T17:53:02.817+0000] {sql.py:262} INFO - Executing: 
    CREATE TABLE IF NOT EXISTS raw.email_marketing (
        id PRIMARY KEY,
        date DATE NOT NULL,
        user_email VARCHAR(100),
        campaign VARCHAR(100),
        ad VARCHAR(100),
        received INT,
        opened INT,
        subscribed INT,
        clicks INT,
        bounces INT,
        unsubscribed INT,
        created_at TIMESTAMP 
    );
        
    
[2024-07-06T17:53:02.820+0000] {base.py:73} INFO - Using connection ID 'company_dw' for task execution.
[2024-07-06T17:53:02.842+0000] {base.py:73} INFO - Using connection ID 'company_dw' for task execution.
[2024-07-06T17:53:02.844+0000] {sql.py:375} INFO - Running statement: 
    CREATE TABLE IF NOT EXISTS raw.email_marketing (
        id PRIMARY KEY,
        date DATE NOT NULL,
        user_email VARCHAR(100),
        campaign VARCHAR(100),
        ad VARCHAR(100),
        received INT,
        opened INT,
        subscribed INT,
        clicks INT,
        bounces INT,
        unsubscribed INT,
        created_at TIMESTAMP 
    );
        
    , parameters: None
[2024-07-06T17:53:02.845+0000] {taskinstance.py:1824} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.9/site-packages/airflow/providers/common/sql/operators/sql.py", line 268, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.9/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.9/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "PRIMARY"
LINE 3:         id PRIMARY KEY,
                   ^

[2024-07-06T17:53:02.850+0000] {taskinstance.py:1345} INFO - Marking task as UP_FOR_RETRY. dag_id=initialize_etl_environment, task_id=create_email_marketing_table, execution_date=20240702T000000, start_date=20240706T175302, end_date=20240706T175302
[2024-07-06T17:53:02.856+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 790 for task create_email_marketing_table (syntax error at or near "PRIMARY"
LINE 3:         id PRIMARY KEY,
                   ^
; 65)
[2024-07-06T17:53:02.867+0000] {local_task_job_runner.py:225} INFO - Task exited with return code 1
[2024-07-06T17:53:02.876+0000] {taskinstance.py:2651} INFO - 0 downstream tasks scheduled from follow-on schedule check
